Fix: footer alignment

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,7 +10,12 @@
       font-display: swap;
       src: url(./assets/fonts/PlaywriteCU-Regular.ttf) format('tff');
     }
+
+     .dark body {
+      background-color: #121212
+    } 
   }
+
 
   @layer base {
     input:-webkit-autofill,
@@ -49,3 +54,4 @@
   
   
  }  
+
